--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <h1><a href="{{ url_for("index") }}">vpsee.com blog</a></h1>
+    <h1><a href="{{ url_for("index") }}">Cashmere</a></h1>
     {% block content %}
     {% endblock content %}
 </body>
