--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,46 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title>cashmere.com static blog</title>
-</head>
+{% extends "bootstrap_base.html" %}
 
-<body>
-    <h1><a href="{{ url_for("index") }}">Cashmere</a></h1>
-    {% block content %}
-    {% endblock content %}
-</body>
-</html>
+{% block title %}Cashmere{% endblock %}
+
+{% block navbar %}
+<div class="navbar navbar-inverse" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">Cashmere</a>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="/">首页</a></li>
+                <li><a href="/">流程规范</a></li>
+                <li><a href="/">技术服务</a></li>
+                <li><a href="/">教程</a></li>
+                <li><a href="/">关于我们</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+{% endblock %}
+
+{% block content %}
+<div class="container">
+    <div class="page-header">
+        <h1>Hello, {{ name }}!</h1>
+    </div>
+</div>
+{% endblock %}
+
+{% block footer %}
+<footer class="footer">
+    <p>&copy; 2016 Company, Inc.</p>
+  </footer>
+{% endblock %}
+
+
+
+
