--- a/templates/page.html
+++ b/templates/page.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-    
-    <div class="jumbotron" >
-        <h2>{{ page.title }}</h2>
-        {{ page.html|safe }} 
-        <p> contest </p>
+    <div class="container"
+        <div class="jumbotron" >
+            <h2>{{ page.title }}</h2>
+            {{ page.html|safe }} 
+            <p> contest </p>
+        </div>
     </div>
     
 {% endblock content %}
