--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-    {{super()}}
-    <h2>List of pages
-    <ul>
-        {% for page in pages %}
-        <li>
-            <a href="{{ url_for("page", path=page.path) }}">{{ page.title }}</a>
-        </li>
-        {% else %}
-        <li>No post.</li>
-        {% endfor %}
-    </ul>
+    <div class="container">
+        <h2>List of pages
+            <ul>
+                {% for page in pages %}
+                <li>
+                    <a href="{{ url_for("page", path=page.path) }}">{{ page.title }}</a>
+                </li>
+                {% else %}
+                <li>No post.</li>
+                {% endfor %}
+            </ul>
+    </div>
+ 
 {% endblock content %}
 
 
