--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
                 <li><a href="/">首页</a></li>
                 <li><a href="/">流程规范</a></li>
                 <li><a href="/">技术服务</a></li>
-                <li><a href="/">开发案例</a></li>
-                <li><a href="/">教程</a></li>
-                <li><a href="/">关于我们</a></li>
+                <li><a href="/case_demos/">开发案例</a></li>
+                <li><a href="/tutorials/">教程</a></li>
+                <li><a href="/about/">关于我们</a></li>
             </ul>
         </div>
     </div>
@@ -44,7 +44,7 @@
 {%block footer%}
 <footer class="footer navbar-static-bottom">
         <div class="container">
-          <p class="text-muted">Place sticky footer content here.</p>
+          <p class="text-muted">翔艺影视动画技术公司, 版权所有, 2018</p>
         </div>
       </footer>
 </footer>
