--- a/static/css/sticky-footer.css
+++ b/static/css/sticky-footer.css
@@ -12,8 +12,9 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
+  align-content: center;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 45px;
   background-color: #f5f5f5;
 }
 
@@ -24,7 +25,7 @@ body {
 
 .container {
   width: auto;
-  max-width: 680px;
+  max-width: 820px;
   padding: 0 15px;
 }
 .container .text-muted {
