--- a/templates/base.html
+++ b/templates/base.html
@@ -44,7 +44,7 @@
 {%block footer%}
 <footer class="footer navbar-static-bottom">
         <div class="container">
-          <p class="text-muted">Place sticky footer content here.</p>
+          <p class="text-muted">翔艺影视动画技术公司, 版权所有, 2018</p>
         </div>
       </footer>
 </footer>
