--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,6 @@
-{% extends "base.html" %}
+{% extends "base_templates/base.html" %}
 
 {% block content %}
-
-{{super()}}
 
 <h2>List of pages </h2>
 <ul>
