--- a/templates/services/page.html
+++ b/templates/services/page.html
@@ -1,10 +1,11 @@
-{% extends "base_templates/base.html" %}
+{% extends "base.html" %}
 
 {% block content %}
     <div class="container"
         <div class="jumbotron" >
             <h2>{{ page.title }}</h2>
             {{ page.html|safe }} 
+            <p> contest </p>
         </div>
     </div>   
 {% endblock content %}
