--- a/templates/demos/index.html
+++ b/templates/demos/index.html
@@ -3,8 +3,6 @@
 {% block content %}
     <div class="container">
         <h2>List of pages</h2>
-        <p>Main Page</p>
+        <p>Demo Main Page</p>
     </div>
 {% endblock content %}
-
-
