--- a/templates/productions/index.html
+++ b/templates/productions/index.html
@@ -4,5 +4,10 @@
     <div class="container">
         <h2>List of pages</h2>
         <p>Production Main Page</p>
+        <ul>
+            {% for page in pages %}
+                <li><a href="{{ url_for('page', path=page.path) }}">{{ page.title }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
 {% endblock content %}
