--- a/templates/base_templates/navbar.html
+++ b/templates/base_templates/navbar.html
@@ -20,6 +20,8 @@
                 <li><a href="{{ url_for('page', path='demos') }}">开发案例</a></li>
                 <li><a href="{{ url_for('page', path='courses') }}">教程</a></li>
                 <li><a href="{{ url_for('page', path='about') }}">关于我们</a></li>
+                <li>   </li>
+                <li><a href="{{ url_for('page', path='contact') }}">联系我们</a></li>
             </ul>
         </div>
     </div>
