--- a/templates/productions/index.html
+++ b/templates/productions/index.html
@@ -2,11 +2,10 @@
 
 {% block content %}
     <div class="container">
-        <h2>List of pages</h2>
-        <p>Production Main Page</p>
         <ul>
             {% for page in pages %}
-                <li><a href="{{ url_for('page', path=page.path) }}">{{ page.title }}</a></li>
+                {% include "base/article_thumb.html" %}
+                <h3>  </h3>
             {% endfor %}
         </ul>
     </div>
