--- a/templates/base/navbar.html
+++ b/templates/base/navbar.html
@@ -14,13 +14,12 @@
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('page', path='productions') }}">软件产品</a></li>
-                <li><a href="{{ url_for('page', path='pipeline') }}">生产流程</a></li>
+                <!-- <li><a href="{{ url_for('page', path='productions') }}">软件产品</a></li> -->
+                <!-- <li><a href="{{ url_for('page', path='pipeline') }}">生产流程</a></li> -->
                 <li><a href="{{ url_for('page', path='services') }}">技术服务</a></li>
                 <li><a href="{{ url_for('page', path='demos') }}">开发案例</a></li>
                 <li><a href="{{ url_for('page', path='courses') }}">教程</a></li>
                 <li><a href="{{ url_for('page', path='about') }}">关于我们</a></li>
-                <li>   </li>
                 <li><a href="{{ url_for('page', path='contact') }}">联系我们</a></li>
             </ul>
         </div>
