--- a/templates/services/page.html
+++ b/templates/services/page.html
@@ -4,8 +4,8 @@
     <div class="container"
         <div class="jumbotron" >
             <h2>{{ page.title }}</h2>
+            <h4>{{ page.date }}</h4>
             {{ page.html|safe }} 
-            <p> contest </p>
         </div>
     </div>   
 {% endblock content %}
