--- a/templates/page.html
+++ b/templates/page.html
@@ -4,7 +4,7 @@
     <div class="container"
         <div class="jumbotron" >
             <h2>{{ page.title }}</h2>
-            {{ page.html|safe }} 
+            <!-- {{ page.html|safe }}  -->
         </div>
     </div>   
 {% endblock content %}
